# mini-ftp-cli

./: .gitignore  README.md
.github/workflows/: rust-clippy.yml
assets/: example.webm
certificates/: rootCA.crt  rootCA.key  rootCA.srl  server.crt  server.csr  server.key  server_chain.pem  v3.ext
ftp-client/: Cargo.toml  test.txt
ftp-client/copied_src/: main.rs
ftp-client/src/: main.rs  prelude.rs
ftp-server/: Cargo.toml  test.txt
ftp-server/src/: main.rs  prelude.rs
somewhere/: filetar.tar
useful/: Cargo.toml
useful/src/: lib.rs
