[package]
name = "ftp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
useful = {path = "../useful"}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7" # Optional for framed communication
tokio-rustls = "0.26.0"
rustls = "0.23.18"
tar = "0.4.43"
color-eyre = "0.6.3"
